<resources>
    <string name="app_name">EzMidiPiano</string>
    <string name="action_settings">Settings</string>
    <string name="thru_off">Thru OFF</string>
    <string name="thru_on">Thru ON</string>
    <string name="midi_input">MIDI Input</string>
    <string name="midi_output">MIDI Output</string>
    <string name="midi_message_data">_MIDI_MESSAGE_DATA</string>
    <string name="cable_id">Cable ID :</string>
    <string name="midi_thru_in_to_out">MIDI Thru(In to Out) :</string>
    <string name="midi_device">MIDI Device :</string>
    <string name="select_sound">Select Sound</string>
    <string name="file_error">FILE NOT FOUND</string>
    <string name="instruments_name">Instruments Name_</string>
    <string name="icon_for_instruments">icon for instruments_</string>
    <string name="reScanDevice">RE SCAN</string>
    <string name="select_sound_">select_sound</string>
    <string name="recording">Recording</string>
    <string name="expand_piano_view">Change To Touch Mode</string>
    <string name="stop_recording">STOP</string>
    <string name="recording_dialog">Recording Dialog</string>
    <string name="TimeSignature">TimeSignature</string>
    <string name="Tempo">Tempo</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="EnterTimeSignature">Tap To Enter Time Signature</string>
    <string name="EnterTempo">Tap To Enter Song Tempo</string>
    <string name="SongName">Song Name</string>
    <string name="EnterSongName">Tap To Enter Song Name</string>
    <string name="str_recording">RECORDING</string>
    <string name="note_letter" />
    <string name="note_C">C</string>
    <string name="instruments_name_tv">Instruments Information</string>
    <string name="name">Name:</string>
    <string name="Image">Image:</string>
    <string name="GrandPiano">Grand Piano</string>
    <string name="Display">Display</string>
    <string name="noteSymbol">Note Playing</string>
    <string name="Mididata">Midi Data Send</string>
    <string name="MidiEvent">Midi Event</string>
    <string name="StartMidiSheet">Open Midi Sheet Page</string>
    <string name="start_metronome">Start</string>
    <string name="stop_metronome">Stop</string>
    <string name="Select_Chord">Select Chord</string>
    <string name="Chord_Extension">Chord Extension</string>
    <string name="Chord_Root">Chord_Root</string>
    <string name="StaffNote">Musical Note</string>
    <string name="StartNoteDetection">Microphone Note Detection </string>
    <string name="StartPianoLargeView">Start Piano Large View</string>
    <string name="StartChordLearning">Chord Picker</string>

    <!-- Order is important here: -->
    <string-array name="instrument_name">
        <item>Grand Piano"</item>
        <item>Electric Piano</item>
        <item>Jazz Organ</item>
        <item>Live String</item>
        <item>Acoustic Guitar</item>
        <item>Rock Guitar</item>
        <item>Finger Bass</item>
        <item>Smooth Brass</item>
        <item>Synth Lead 1</item>
        <item>Synth Lead 2</item>
        <item>Accordion</item>
        <item>Natural Flute</item>
        <item>Dream Wave  </item>
        <item>Pro Pad Wave  </item>
        <item>Studio Drummer </item>
        <item>Studio Kit Loop </item>
    </string-array>

    <string-array name="instrument_path">
        <item>GrandPiano"</item>
        <item>ElectricPiano</item>
        <item>Organ</item>
        <item>String</item>
        <item>AccGuitar</item>
        <item>RockGuitar</item>
        <item>Studbass</item>
        <item>brass</item>
        <item>SynthLead1</item>
        <item>Supersaw</item>
        <item>accordion</item>
        <item>Kelflute</item>
        <item>PadWave1</item>
        <item>Balchoir</item>
        <item>StudioKit1</item>
        <item>StudioKit2</item>
    </string-array>

    <string-array name="image">
        <item>@drawable/grand_piano</item>
        <item>@drawable/epiano_</item>
        <item>@drawable/organ</item>
        <item>@drawable/violin</item>
        <item>@drawable/acguitar</item>
        <item>@drawable/eguitar</item>
        <item>@drawable/bass</item>
        <item>@drawable/brass</item>
        <item>@drawable/synthlead1</item>
        <item>@drawable/synthesizer</item>
        <item>@drawable/accordion</item>
        <item>@drawable/flute</item>
        <item>@drawable/pad</item>
        <item>@drawable/pad2</item>
        <item>@drawable/drums1</item>
        <item>@drawable/drum2</item>

    </string-array>

    <string-array name="image_path">
        <item>grand_piano</item>
        <item>epiano_</item>
        <item>organ</item>
        <item>violin</item>
        <item>acguitar</item>
        <item>eguitar</item>
        <item>bass</item>
        <item>brass</item>
        <item>synthlead1</item>
        <item>synthesizer</item>
        <item>accordion</item>
        <item>flute</item>
        <item>pad</item>
        <item>pad2</item>
        <item>drums1</item>
        <item>drum2</item>

    </string-array>
</resources>