<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1" >

            <TextView
                android:textColor="@color/colorBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/midi_device"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/deviceNameSpinner"
                android:layout_width="466dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorBackground"

                android:spinnerMode="dropdown"
                android:textColor="@color/colorBackground" />
        </LinearLayout>

    </LinearLayout>



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/midi_input"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/midiInputEventListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" >
    </ListView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/midi_output"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/midiOutputEventListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" >
    </ListView>

</LinearLayout>