<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center">

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:baselineAligned="false">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/Select_Chord"
            android:textAppearance="?android:attr/textAppearanceLargeInverse"
            android:textColor="@color/colorBackground" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:baselineAligned="false">

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:baselineAligned="true">

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/chord_area_view"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:baselineAligned="false"
        android:orientation="vertical">
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/Chord_Root"
            android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
            android:textColor="@color/colorBackground" />

        <TableLayout
            android:id="@+id/table_rootNote"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:stretchColumns="*" />
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/Chord_Extension"
            android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
            android:textColor="@color/colorBackground" />
        <TableLayout
            android:id="@+id/table_chord"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:stretchColumns="*"
            android:gravity="center_horizontal" />


    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:baselineAligned="false">

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_marginStart="70dp"
                android:id="@+id/button_cancel"
                android:text="@string/cancel"
                android:background="@drawable/custom_button"
                android:layout_width="100dp"
                android:layout_height="40dp"/>

            <Button
                android:layout_margin="20dp"
                android:id="@+id/button_ok"
                android:text="@string/OK"
                android:background="@drawable/custom_button"
                android:layout_width="100dp"
                android:layout_height="40dp"/>





        </LinearLayout>


    </LinearLayout>




</LinearLayout>


